[tool.poetry]
name = "bouncing-ball"
version = "0.1.0"
description = ""
authors = ["'Ivan Petropolsky' <ivan.petropolsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
